html and css done serverjs is completed it works

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -9,7 +9,7 @@
        <div class="card-body">
          <h5><a class="card-title" target="_blank" href="{{link}}">{{title}}</a></h5>
          <p class="card-text">{{detail}}</p>
-         <button class="btn btn-success btn-save">Save Article</button>
+         <button data-id="{{_id}}" class="btn btn-success btn-save">Save Article</button>
        </div>
      </div>
    </div>
